🔒 SECURITY FIX: Remove exposed Google API key and cleanup unwanted files

--- a/orpheus-voice-chat/.env.example
+++ b/orpheus-voice-chat/.env.example
@@ -1,6 +1,9 @@
 # Environment variables for Orpheus Voice Chat
 # Copy this file to .env and fill in your values
 
+# Google API Configuration (REQUIRED)
+GOOGLE_API_KEY=your_google_gemini_api_key_here
+
 # Server Configuration
 PORT=8080
 HOST=0.0.0.0
