--- a/orpheus-voice-chat/requirements.txt
+++ b/orpheus-voice-chat/requirements.txt
@@ -1,5 +1,8 @@
 # Orpheus-TTS Voice Chat System Dependencies
 
+# Environment Management
+python-dotenv>=1.0.0
+
 # Core Dependencies
 google-generativeai>=0.3.2
 edge-tts>=6.1.9  
