Security fix: Remove hardcoded tokens and add secure environment setup

--- a/orpheus-voice-chat/.env.example
+++ b/orpheus-voice-chat/.env.example
@@ -4,13 +4,17 @@
 # Google API Configuration (REQUIRED)
 GOOGLE_API_KEY=your_google_gemini_api_key_here
 
+# Hugging Face Configuration (REQUIRED for Orpheus TTS)
+HUGGINGFACE_TOKEN=your_huggingface_token_here
+# Get your token from: https://huggingface.co/settings/tokens
+
 # Server Configuration
 PORT=8080
 HOST=0.0.0.0
 DEBUG=false
 
 # Orpheus TTS Configuration
-ORPHEUS_MODEL_NAME=canopylabs/orpheus-tts-0.1-finetune-prod
+ORPHEUS_MODEL_NAME=canopylabs/orpheus-3b-0.1-ft
 DISABLE_TRANSFORMERS=true
 
 # Audio Configuration
